force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__CustomerMobile__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomerMobile__c</fullName>
    <label>Customer Mobile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>