force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__CustomerNamwText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomerNamwText__c</fullName>
    <label>Customer Name-text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>