force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__DestinationWarehouse__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DestinationWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Warehouse</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>PARCEL (Destination Warehouse)</relationshipLabel>
    <relationshipName>PARCEL1</relationshipName>
    <type>Lookup</type>
</CustomField>