force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__External_ID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>