force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__GrossWeightKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrossWeightKG__c</fullName>
    <label>Gross Weight(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>