force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__LabelURL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LabelURL__c</fullName>
    <label>Label URL</label>
    <type>Url</type>
</CustomField>