force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__OriginWarehouse__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OriginWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Warehouse</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>PARCEL</relationshipLabel>
    <relationshipName>PARCEL</relationshipName>
    <type>Lookup</type>
</CustomField>