force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__ParcelDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParcelDeliveryStatus__c</fullName>
    <label>Parcel Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DeliveryStatus</valueSetName>
    </valueSet>
</CustomField>