force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__ParcelDocumentID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParcelDocumentID__c</fullName>
    <label>Parcel Document ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>