force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__ParcelQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParcelQuantity__c</fullName>
    <label>Parcel Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>