force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__RecipientAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RecipientAddress__c</fullName>
    <label>Recipient Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>