force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__RecipientCityProvince__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RecipientCityProvince__c</fullName>
    <label>Recipient City/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__RecipientCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__City_Province</valueSetName>
    </valueSet>
</CustomField>