force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__RecipientMobile__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RecipientMobile__c</fullName>
    <label>Recipient Mobile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>