force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__ShippingLabel1stPage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShippingLabel1stPage__c</fullName>
    <label>Shipping Label 1st Page</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>