force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__ShippingLabel2ndPage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShippingLabel2ndPage__c</fullName>
    <label>Shipping Label 2nd Page</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>