force-app/main/default/objects/clofor_com_cfs__Parcel__c/fields/clofor_com_cfs__WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>clofor_com_cfs__WorkOrder__c</referenceTo>
    <relationshipLabel>PARCEL</relationshipLabel>
    <relationshipName>Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>