force-app/main/default/objects/clofor_com_cfs__Parcel__c/recordTypes/clofor_com_cfs__Delivery.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Delivery</fullName>
    <active>true</active>
    <description>Service supplied by our company</description>
    <label>Delivery</label>
</RecordType>