force-app/main/default/objects/clofor_com_cfs__Parcel__c/recordTypes/clofor_com_cfs__Express.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Express</fullName>
    <active>true</active>
    <description>Service supplied by 3rd party</description>
    <label>Express</label>
</RecordType>